infrastructure/routing/production/cilium-gateway/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect
  namespace: cilium-gateway
spec:
  parentRefs:
    - name: apps-gateway
      namespace: cilium-gateway
      sectionName: http
    - name: db-gateway
      namespace: cilium-gateway
      sectionName: http
    - name: adguard-dns-gateway
      namespace: cilium-gateway
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
